samples/_failures_safe/1761263509_42f8fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a63cd02.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_4a63cd02.c:145:14: error: expected ‘;’ at end of input
  145 |         token
      |              ^
      |              ;
./samples/SAFE/__tmp_4a63cd02.c:145:9: error: expected declaration or statement at end of input
  145 |         token
      |         ^~~~~
./samples/SAFE/__tmp_4a63cd02.c:145:9: error: expected declaration or statement at end of input
